tests/NormalTests/paczka2/big_fuzzy/38540023.err
Error in line 1: xEzQU9AY S17 4,6
Error in line 2: KzSVeGBUSZ A659 98,1
Error in line 31: 8SIKAB S387 -5,8
Error in line 35: KzSVeGBUSZ S17 17,0
Error in line 21: 8SIKAB S387 83,4
Error in line 41: 8SIKAB S17 12,2
Error in line 57: 8SIKAB S17 13,6
Error in line 54: sFhSveE0 A659 48,9
Error in line 61: xEzQU9AY S387 80,0
Error in line 64: xEzQU9AY S17 11,4
Error in line 66: xEzQU9AY A465 40,2
Error in line 79: sFhSveE0 S387 44,2
Error in line 80: A465 A465 2,8
Error in line 90: A465 A659 93,0
Error in line 95: KzSVeGBUSZ S17 20,5
Error in line 108: z8F9IBFnu A465 67,3
Error in line 124: z8F9IBFnu A659 77,0
Error in line 130: z8F9IBFnu S17 10,1
Error in line 132: z8F9IBFnu S387 66,0
Error in line 133: z8F9IBFnu A659 90,5
Error in line 137: 8SIKAB S387 22,9
Error in line 156: z8F9IBFnu A659 9,99
Error in line 121: sFhSveE0 A659 73,9
Error in line 170: sFhSveE0 A465 33,3
Error in line 178: z8F9IBFnu S387 71,0
Error in line 185: xEzQU9AY A465 72,4
Error in line 194: KU8K4ApmWH S387 78,3
Error in line 210: xEzQU9AY S17 42,0
Error in line 215: sFhSveE0 A659 60,5
Error in line 218: sFhSveE0 A465 78,0
Error in line 220: sFhSveE0 A659 68,6
Error in line 228: xEzQU9AY A659 307,69
Error in line 229: 8SIKAB SO87 62,0
Error in line 225: xEzQU9AY A659 76,6
Error in line 232: KzSVeGBUSZ S387 76,6
Error in line 237: KU8K4ApmWH A465 43,7
Error in line 240: KU8K4ApmWH A659 52,5
Error in line 235: 8SIKAB S387 143,2
Error in line 247: z8F9IBFnu A465 60,6
